--- a/index.html
+++ b/index.html
@@ -9,17 +9,14 @@
   <title>LOCATEdit : Graph Laplacian Optimized Cross Attention for Localized Text-Guided Image Editing</title>
 
   <!-- Global site tag (gtag.js) - Google Analytics -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-PYVRSFMDRL"></script>
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-ZBCZRJ1425"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
-
-    function gtag() {
-      dataLayer.push(arguments);
-    }
-
+    function gtag(){dataLayer.push(arguments);}
     gtag('js', new Date());
 
-    gtag('config', 'G-PYVRSFMDRL');
+    gtag('config', 'G-ZBCZRJ1425');
   </script>
 
   <link href="https://fonts.googleapis.com/css?family=Google+Sans|Noto+Sans|Castoro"
@@ -103,11 +100,12 @@
           <h1 class="title is-1 publication-title">LOCATEdit : Graph Laplacian Optimized Cross Attention for Localized Text-Guided Image Editing</h1>
           <div class="is-size-5 publication-authors">
             <span class="author-block">
-              <a href="https://trickyjustice.github.io">Achint Soni</a><sup>1</sup>,</span>
+              <a href="https://trickyjustice.github.io" target="_blank" rel="noopener noreferrer">Achint Soni</a><sup>1</sup>,
+            </span>
             <span class="author-block">
-              <a href="https://github.com/meet-soni5720">Meet Soni</a><sup>2</sup>,</span>
+              <a href="https://github.com/meet-soni5720" target="_blank" rel="noopener noreferrer">Meet Soni</a><sup>2</sup>,</span>
             <span class="author-block">
-              <a href="https://sirisharambhatla.com/">Sirisha Rambhatla</a><sup>1</sup>,
+              <a href="https://sirisharambhatla.com/" target="_blank" rel="noopener noreferrer">Sirisha Rambhatla</a><sup>1</sup>,
             </span>
           </div>
 
@@ -121,7 +119,7 @@
               <!-- PDF Link. -->
               <span class="link-block">
                 <a href="https://arxiv.org/pdf/2011.12948"
-                   class="external-link button is-normal is-rounded is-dark">
+                   class="external-link button is-normal is-rounded is-dark" target="_blank" rel="noopener noreferrer">
                   <span class="icon">
                       <i class="fas fa-file-pdf"></i>
                   </span>
@@ -130,27 +128,17 @@
               </span>
               <span class="link-block">
                 <a href="https://arxiv.org/abs/2011.12948"
-                   class="external-link button is-normal is-rounded is-dark">
+                   class="external-link button is-normal is-rounded is-dark" target="_blank" rel="noopener noreferrer">
                   <span class="icon">
                       <i class="ai ai-arxiv"></i>
                   </span>
                   <span>arXiv</span>
                 </a>
               </span>
-              <!-- Video Link. -->
-              <span class="link-block">
-                <a href="https://www.youtube.com/watch?v=MrKrnHhk8IA"
-                   class="external-link button is-normal is-rounded is-dark">
-                  <span class="icon">
-                      <i class="fab fa-youtube"></i>
-                  </span>
-                  <span>Video</span>
-                </a>
-              </span>
               <!-- Code Link. -->
               <span class="link-block">
                 <a href="https://github.com/LOCATEdit/LOCATEdit"
-                   class="external-link button is-normal is-rounded is-dark">
+                   class="external-link button is-normal is-rounded is-dark" target="_blank" rel="noopener noreferrer">
                   <span class="icon">
                       <i class="fab fa-github"></i>
                   </span>
@@ -348,8 +336,8 @@
   </div>
 
     <!--/ Methods Section -->
-    
-    <!-- Concurrent Work. -->
+<!--     
+    Concurrent Work.
     <div class="columns is-centered">
       <div class="column is-full-width">
         <h2 class="title is-3">Related Links</h2>
@@ -374,13 +362,13 @@
         </div>
       </div>
     </div>
-    <!--/ Concurrent Work. -->
+    / Concurrent Work. -->
 
   </div>
 </section>
 
 
-<section class="section" id="BibTeX">
+<!-- <section class="section" id="BibTeX">
   <div class="container is-max-desktop content">
     <h2 class="title">BibTeX</h2>
     <pre><code>@article{park2021nerfies,
@@ -390,7 +378,7 @@
   year      = {2021},
 }</code></pre>
   </div>
-</section>
+</section> -->
 
 
 <footer class="footer">
@@ -413,11 +401,8 @@
             Commons Attribution-ShareAlike 4.0 International License</a>.
           </p>
           <p>
-            This means you are free to borrow the <a
-              href="https://github.com/nerfies/nerfies.github.io">source code</a> of this website,
-            we just ask that you link back to this page in the footer.
-            Please remember to remove the analytics code included in the header of the website which
-            you do not want on your website.
+            Website adapted from the following <a
+              href="https://github.com/nerfies/nerfies.github.io">source code</a>.
           </p>
         </div>
       </div>
