--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
 
     gtag('config', 'G-ZBCZRJ1425');
   </script>
+  
+
+  <link rel="icon" type="image/png" href="./static/images/logo.jpeg">
 
   <link href="https://fonts.googleapis.com/css?family=Google+Sans|Noto+Sans|Castoro"
         rel="stylesheet">
