--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   </script>
   
 
-  <link rel="icon" type="image/png" href="./static/images/logo.jpeg">
+  <link rel="icon" type="image/png" href="./static/images/logo.ico">
 
   <link href="https://fonts.googleapis.com/css?family=Google+Sans|Noto+Sans|Castoro"
         rel="stylesheet">
