--- a/index.html
+++ b/index.html
@@ -121,14 +121,14 @@
             <div class="publication-links">
               <!-- PDF Link. -->
               <span class="link-block">
-                <a href="https://arxiv.org/pdf/2011.12948"
-                   class="external-link button is-normal is-rounded is-dark" target="_blank" rel="noopener noreferrer">
+                <button class="button is-normal is-rounded is-light" disabled>
                   <span class="icon">
-                      <i class="fas fa-file-pdf"></i>
+                      <i class="fas fa-hourglass-half"></i>
                   </span>
-                  <span>Paper</span>
-                </a>
+                  <span>Paper (Coming Soon)</span>
+                </button>
               </span>
+<!-- 
               <span class="link-block">
                 <a href="https://arxiv.org/abs/2011.12948"
                    class="external-link button is-normal is-rounded is-dark" target="_blank" rel="noopener noreferrer">
@@ -137,7 +137,7 @@
                   </span>
                   <span>arXiv</span>
                 </a>
-              </span>
+              </span> -->
               <!-- Code Link. -->
               <span class="link-block">
                 <a href="https://github.com/LOCATEdit/LOCATEdit"
@@ -387,11 +387,11 @@
 <footer class="footer">
   <div class="container">
     <div class="content has-text-centered">
-      <a class="icon-link"
+      <!-- <a class="icon-link"
          href="./static/videos/nerfies_paper.pdf">
         <i class="fas fa-file-pdf"></i>
-      </a>
-      <a class="icon-link" href="https://github.com/keunhong" class="external-link" disabled>
+      </a> -->
+      <a class="icon-link" href="https://github.com/TrickyJustice" class="external-link" disabled>
         <i class="fab fa-github"></i>
       </a>
     </div>
