--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
 
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <!-- Google tag (gtag.js) -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-ZBCZRJ1425"></script>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-VBWT2TJ588"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
     gtag('js', new Date());
 
-    gtag('config', 'G-ZBCZRJ1425');
+    gtag('config', 'G-VBWT2TJ588');
   </script>
   
 
