--- a/index.html
+++ b/index.html
@@ -117,40 +117,48 @@
             <span class="author-block"><sup>2</sup>Stony Brook University</span>
           </div>
 
+          <p class="is-size-5 has-text-weight-semibold mt-4">Under review at ICCV 2025</p>
+
+
           <div class="column has-text-centered">
             <div class="publication-links">
-              <!-- PDF Link. -->
+              <!-- arXiv Link -->
               <span class="link-block">
-                <button class="button is-normal is-rounded is-light" disabled>
-                  <span class="icon">
-                      <i class="fas fa-hourglass-half"></i>
-                  </span>
-                  <span>Paper (Coming Soon)</span>
-                </button>
-              </span>
-<!-- 
-              <span class="link-block">
-                <a href="https://arxiv.org/abs/2011.12948"
-                   class="external-link button is-normal is-rounded is-dark" target="_blank" rel="noopener noreferrer">
+                <a href="https://arxiv.org/abs/2503.21541"
+                  class="external-link button is-normal is-rounded is-dark" target="_blank" rel="noopener noreferrer">
                   <span class="icon">
                       <i class="ai ai-arxiv"></i>
                   </span>
                   <span>arXiv</span>
                 </a>
-              </span> -->
-              <!-- Code Link. -->
+              </span>
+
+              <!-- Hugging Face Papers Link -->
+              <span class="link-block">
+                <a href="https://huggingface.co/papers/2503.21541"
+                  class="external-link button is-normal is-rounded is-dark" target="_blank" rel="noopener noreferrer">
+                  <span class="icon">
+                    <img src="https://huggingface.co/front/assets/huggingface_logo-noborder.svg" alt="Hugging Face" style="height: 1em;">
+                  </span>
+                  <span>HF Papers</span>
+                </a>
+              </span>
+
+              <!-- Code Link -->
               <span class="link-block">
                 <a href="https://github.com/LOCATEdit/LOCATEdit"
-                   class="external-link button is-normal is-rounded is-dark" target="_blank" rel="noopener noreferrer">
+                  class="external-link button is-normal is-rounded is-dark" target="_blank" rel="noopener noreferrer">
                   <span class="icon">
                       <i class="fab fa-github"></i>
                   </span>
                   <span>Code</span>
-                  </a>
+                </a>
               </span>
             </div>
-
           </div>
+
+
+
         </div>
       </div>
     </div>
@@ -238,6 +246,32 @@
           <div class="card-footer">
             <div class="card-footer-item has-text-centered">
               <p>Withered rose in nature vs Blooming rose</p>
+            </div>
+          </div>
+        </div>
+
+        <!-- Slide 4: Additional image pair (example: withered vs blooming rose) -->
+        <div class="card">
+          <div class="card-content">
+            <div class="columns is-vcentered">
+              <!-- Left Image -->
+              <div class="column is-half has-text-centered">
+                <figure class="image">
+                  <img src="./static/images/carousel/galaxy.jpg" alt="Galaxy">
+                </figure>
+              </div>
+              <!-- Right Image -->
+              <div class="column is-half has-text-centered">
+                <figure class="image">
+                  <img src="./static/images/carousel/sunset_galaxy.jpeg" alt="Sunset">
+                </figure>
+              </div>
+            </div>
+          </div>
+          <!-- Caption for the pair -->
+          <div class="card-footer">
+            <div class="card-footer-item has-text-centered">
+              <p>Galaxy over the durdle door vs sunset over the durdle door.</p>
             </div>
           </div>
         </div>
