--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
             <span class="author-block"><sup>2</sup>Stony Brook University</span>
           </div>
 
-          <p class="is-size-5 has-text-weight-semibold mt-4">Under review at ICCV 2025</p>
+          <p class="is-size-5 has-text-weight-semibold mt-4">Accepted at ICCV 2025</p>
 
 
           <div class="column has-text-centered">
